--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Define the character set and compatibility of the document -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Define the viewport for responsive design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to external CSS file -->
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <!-- Set the title of the page -->
+    <title>Kassid</title>
 </head>
 <body>
-    
+
+    <!-- Set the heading of the page -->
     <h1>Kassid</h1>
 
-    <div id="conteiner">
+    <!-- Define the container for the cat breeds -->
+    <div id="container">
         
 
     </div>
 
+    <!-- Link to external JS file -->
     <script src="app.js"></script>
 </body>
 </html>
